# PdfiumAndroidKt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle  build.gradle.kts  check  deploy.sh  gradle-mvn-push.gradle  gradle.properties  kover  native-code-coverage  regendoc.sh  release.sh  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml  ci.yml  gradle-publish.yml
PdfiumAndroid/: build.gradle  consumer-rules.pro  gradle.properties  proguard-rules.pro
PdfiumAndroid/arrow/: build.gradle.kts
PdfiumAndroid/src/androidTest/java/io/legere/pdfiumandroid/: ExampleInstrumentedTest.kt  PdfDocumentTest.kt  PdfPageTest.kt  PdfTextPageTest.kt  PdfiumCoreTest.kt
PdfiumAndroid/src/androidTest/java/io/legere/pdfiumandroid/base/: BasePDFTest.kt
PdfiumAndroid/src/androidTest/java/io/legere/pdfiumandroid/suspend/: PdfDocumentKtTest.kt  PdfPageKtTest.kt  PdfTextPageKtTest.kt  PdfiumCoreKtTest.kt
PdfiumAndroid/src/main/cpp/: CMakeLists.txt  pdfiumandroid.cpp  util.h
PdfiumAndroid/src/main/cpp/include/: fpdf_formfill.h
PdfiumAndroid/src/main/java/io/legere/pdfiumandroid/: Logger.kt  NativeLib.kt  PdfDocument.kt  PdfPage.kt  PdfPasswordException.kt  PdfTextPage.kt  PdfWriteCallback.kt  PdfiumCore.kt
PdfiumAndroid/src/main/java/io/legere/pdfiumandroid/suspend/: PdfDocumentKt.kt  PdfPageKt.kt  PdfTextPageKt.kt  PdfiumCoreKt.kt
PdfiumAndroid/src/main/java/io/legere/pdfiumandroid/util/: Config.kt  InitLock.kt  Size.kt
PdfiumAndroid/src/test/java/io/legere/pdfiumandroid/: ExampleUnitTest.kt
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/legere/pdfiumandroidkt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/legere/pdfiumandroidkt/: App.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/io/legere/pdfiumandroidkt/ui/: PdfViewer.kt  PdfiumFetcher.kt
app/src/main/res/drawable/: outline_file_open_24.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/legere/pdfiumandroidkt/: ExampleUnitTest.kt
benchmarkResults/: 1.0.35  2.0.0.beta9
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/io/legere/convention/: AndroidApplicationComposeConventionPlugin.kt  AndroidApplicationConventionPlugin.kt  AndroidBaselineProfileConventionPlugin.kt  AndroidHiltConventionPlugin.kt  AndroidLibraryComposeConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  JacocoPlugin.kt  Junit5ConventionPlugin.kt  JvmLibraryConventionPlugin.kt  KoverPlugin.kt  PublishConventionPlugin.kt  PublishPluginExtension.kt  StaticAnalysisConventionPlugin.kt
build-logic/convention/src/main/kotlin/io/legere/support/: AndroidCompose.kt  AppConfig.kt  BuildTypes.kt  Common.kt  Detekt.kt  KotlinAndroid.kt  Lint.kt  Packaging.kt
config/detekt/: detekt.yml
config/lint/: lint.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pdfiumandroid/: build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
pdfiumandroid/api/: build.gradle.kts
pdfiumandroid/arrow/: build.gradle.kts  gradle.properties
pdfiumandroid/arrow/src/test/resources/: robolectric.properties
pdfiumandroid/benchmark/: benchmark-proguard-rules.pro  build.gradle.kts
pdfiumandroid/benchmark/src/androidTest/: AndroidManifest.xml
pdfiumandroid/benchmark/src/main/: AndroidManifest.xml
pdfiumandroid/core/: build.gradle.kts
pdfiumandroid/core/src/main/: AndroidManifest.xml
pdfiumandroid/core/src/main/cpp/: CMakeLists.txt  pdfiumandroid.cpp
pdfiumandroid/src/androidTest/java/io/legere/pdfiumandroid/: FastNativeTest.kt  PdfDocumentTest.kt  PdfPageLinkTest.kt  PdfPageTest.kt  PdfTextPageTest.kt  PdfiumCoreTest.kt
pdfiumandroid/src/androidTest/java/io/legere/pdfiumandroid/base/: BasePDFTest.kt  ByteArrayPdfiumSource.kt
pdfiumandroid/src/androidTest/java/io/legere/pdfiumandroid/jni/: NativeCoreTest.kt  NativeDocumentTest.kt  NativeFindResultTest.kt  NativePageLinkTest.kt  NativePageTest.kt  NativeTextPageTest.kt
pdfiumandroid/src/androidTest/java/io/legere/pdfiumandroid/suspend/: PdfDocumentKtTest.kt  PdfPageKtTest.kt  PdfPageLinkKtTest.kt  PdfTextPageKtTest.kt  PdfiumCoreKtTest.kt
pdfiumandroid/src/androidTest/java/io/legere/pdfiumandroid/unlocked/: PdfDocumentUClosedHandledTest.kt  PdfDocumentUClosedNotHandledTest.kt  PdfDocumentUTest.kt  PdfPageUClosedDocumentNotHandledTest.kt  PdfPageUClosedHandledTest.kt  PdfPageUClosedPageNotHandledTest.kt  PdfPageUTest.kt  PdfTextPageUClosedDocumentNotHandledTest.kt  PdfTextPageUClosedHandledTest.kt  PdfTextPageUClosedPageNotHandledTest.kt  PdfTextPageUTest.kt
pdfiumandroid/src/androidTest/java/io/legere/pdfiumandroid/util/: PdfiumNativeSourceBridgeTest.kt
pdfiumandroid/src/main/: AndroidManifest.xml
pdfiumandroid/src/main/cpp/: CMakeLists.txt  pdfiumandroid.cpp
pdfiumandroid/src/main/cpp/include/: fpdfview.h
pdfiumandroid/src/main/java/io/legere/pdfiumandroid/: FindResult.kt  LockManager.kt  Logger.kt  Migration.kt  PageAttributes.kt  PageInfo.kt  PdfDocument.kt  PdfPage.kt  PdfPageCache.kt  PdfPageLink.kt  PdfPasswordException.kt  PdfTextPage.kt  PdfWriteCallback.kt  PdfiumCore.kt  PdfiumLockExt.kt  PdfiumSource.kt
pdfiumandroid/src/main/java/io/legere/pdfiumandroid/jni/: NativeCore.kt  NativeDocument.kt  NativeFactory.kt  NativeFindResult.kt  NativePage.kt  NativePageLink.kt  NativeTextPage.kt
pdfiumandroid/src/main/java/io/legere/pdfiumandroid/suspend/: FindResultKt.kt  PdfDocumentKt.kt  PdfPageKt.kt  PdfPageKtCache.kt  PdfPageLinkKt.kt  PdfPageSuspendCacheBase.kt  (+3 more)
pdfiumandroid/src/test/java/android/graphics/: Matrix.kt  Point.kt  PointF.kt  Rect.kt  RectF.kt
pdfiumandroid/src/test/java/io/legere/pdfiumandroid/: FindResultTest.kt  PdfDocumentTest.kt  PdfPageCacheTest.kt  PdfPageLinkTest.kt  PdfPageTest.kt  PdfTextPageTest.kt  PdfiumCoreTest.kt
pdfiumandroid/src/test/resources/: junit-platform.properties
(+151 files in other folders)
